# hw7_module_7

./: docker-compose.yaml  pyproject.toml  seed.py
