[project]
name = "homework-7-module-7"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "faker (>=40.11.0,<41.0.0)",
    "argparse (>=1.4.0,<2.0.0)"
]

[tool.poetry]

package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
